# raycraft

./: CMakeLists.txt
.cache/clangd/index/: game_camera.c.86A2645C5EA9E673.idx  game_camera.h.1EED7E67CD881D2E.idx  game_mouse.c.2E8CB64DC32891D4.idx  game_mouse.h.0620CFE485AEF6B6.idx  main.c.232E53F750F0F237.idx  perlin.c.99D54894E8756CA3.idx  perlin.h.6BA3155677D99E46.idx  player.c.8DBA751C4C718612.idx  player.h.C0D78CBC645D7528.idx  worldgeneration.c.A09C7072E33840E3.idx  worldgeneration.h.3BE62ED31D649EC0.idx  worldmodel.c.2DF72FC996FDC01F.idx  worldmodel.h.F1E1A86C2D450CFE.idx
src/: game_camera.c  game_mouse.c  main.c
src/world/: worldmodel.c
